Show approppriate endpoints in help messages

--- a/ui/src/app/components/help-dialog/help-dialog.component.html
+++ b/ui/src/app/components/help-dialog/help-dialog.component.html
@@ -29,8 +29,8 @@
         <b>Using Segfault CLI</b>
         <ul class="sub-list">
           <li>
-            Use you favourite SSH client and connect to segfault.net, example 
-            <code>ssh root@segfault.net</code>
+            Use you favourite SSH client and connect to {{SfEndpoint}}, example 
+            <code>ssh root@{{SfEndpoint}}</code>
             using the password <b><i>segfault</i></b>
           </li>
           <li>
@@ -42,7 +42,7 @@
       <br>
       <li>
         <b>Using SegfaultUI (this site)</b>
-        <p>SegfaultUI is a GUI frontend for the services that segfault provides, close this dialog and click new to get started.</p>
+        <p>SegfaultUI is a GUI frontend for the services that segfault provides, click new on the start page to get new instance.</p>
       </li>
     </ul>
   </div>
