--- a/ui/src/app/components/save-secret-dialog/save-secret-dialog.component.html
+++ b/ui/src/app/components/save-secret-dialog/save-secret-dialog.component.html
@@ -5,7 +5,7 @@
     <div class="help-content">
         <p>This is your secret <code>{{userSecret}}</code> save it someplace safe!.</p>
         <br>
-        <p>To connect from your terminal use <code>ssh -o "SetEnv SECRET={{userSecret}}" root@segfault.net </code></p>
+        <p>To connect from your terminal use <code>ssh -o "SetEnv SECRET={{userSecret}}" root@{{sfEndpoint}} </code></p>
     </div>
     <mat-dialog-actions align="end">
         <button class="help-close-button" mat-stroked-button mat-dialog-close color="primary">Close</button>
