--- a/ui/src/app/pages/dashboard/dashboard.component.html
+++ b/ui/src/app/pages/dashboard/dashboard.component.html
@@ -27,7 +27,7 @@
     </section>
     <section class="content-view flex-col">
       <terminal-view [ngClass]="{'hidden': activeMenu!='terminal'}"></terminal-view>
-      <desktop-view [ShowFrame]="desktopRequested" [ngClass]="{'hidden': activeMenu!='desktop'}"></desktop-view>
+      <desktop-view  [ngClass]="{'hidden': activeMenu!='desktop'}"></desktop-view>
       <!-- <ports-view [ngClass]="{'hidden': activeMenu!='ports'}"></ports-view> -->
       <!-- <web-view [ngClass]="{'hidden': activeMenu!='web'}"></web-view> -->
       <files-view [ShowFrame]="filesRequested" [InView]="activeMenu=='files'" [ngClass]="{'hidden': activeMenu!='files'}"></files-view>
