Deactivate filebrowser when no terms are open

--- a/ui/src/app/pages/terminal-view/terminal-view.component.html
+++ b/ui/src/app/pages/terminal-view/terminal-view.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="controls-view flex-row">
         <terminal-controls [activeTerminalId]="activeTerminalId" (activeTerminalIdChange)="setActiveTerminal($event)"
-            [(terminalWindows)]="terminalWindows">
+            [(terminalWindows)]="terminalWindows" (noOfTerminalsChange)="setNoOfTerminals($event)">
         </terminal-controls>
         <app-controls></app-controls>
     </div>
