--- a/ui/src/app/pages/files-view/files-view.component.html
+++ b/ui/src/app/pages/files-view/files-view.component.html
@@ -1,22 +1,21 @@
 <div class="flex-col">
-    <div class="page-info-text loading-xpra-indicator" [ngStyle]="{'z-index': FileBrowserActive ? '-99': '0'}">
+    <div class="page-info-text loading-xpra-indicator"
+        [ngStyle]="{'z-index': FileBrowserActive && !FileBrowserNeedsTerminal ? '-99': '0'}">
         <span *ngIf="!FileBrowserActive && !FileBrowserDisconnected && !FileBrowserNeedsTerminal">
             Starting FileBrowser...
         </span>
-        <div *ngIf="FileBrowserDisconnected" class="flex-col disconnected-msg">
+        <div *ngIf="FileBrowserDisconnected && !FileBrowserNeedsTerminal" class="flex-col disconnected-msg">
             <span>Disconnected!</span>
             <div class="reconnect-button" (click)="startFileBrowser()">
                 <span>Reconnect</span>
             </div>
         </div>
         <div *ngIf="FileBrowserNeedsTerminal" class="flex-col disconnected-msg">
-            <span>Disconnected!</span>
+            <span>Attention!</span>
             <i>Please Start A Terminal Before Using Filebrowser</i>
-            <div class="reconnect-button" (click)="startFileBrowser()">
-                <span>Reconnect</span>
-            </div>
         </div>
     </div>
-    <iframe *ngIf="ShowFrame && FileBrowserActive" class="files-view" [src]="FbIframeURL" frameborder="0">
+    <iframe *ngIf="ShowFrame && FileBrowserActive && !FileBrowserNeedsTerminal" class="files-view" [src]="FbIframeURL"
+        frameborder="0">
     </iframe>
 </div>
