Mobile Support Enchancements

--- a/ui/src/app/components/app-controls/app-controls.component.html
+++ b/ui/src/app/components/app-controls/app-controls.component.html
@@ -1,5 +1,5 @@
 <div class="flex-row">
-  <div class="terminal-tab terminal-window-add inactive-bg" (click)="toggleSidebar()">
+  <div class="terminal-tab terminal-window-add inactive-bg sidebar-control" (click)="toggleSidebar()">
     <img *ngIf="sidebarVisible" src="../assets/icons/panel-close.svg" alt="">
     <img *ngIf="!sidebarVisible" src="../assets/icons/panel-open.svg" alt="">
   </div>
