--- a/ui/src/app/pages/dashboard/dashboard.component.html
+++ b/ui/src/app/pages/dashboard/dashboard.component.html
@@ -30,7 +30,7 @@
     <desktop-view [ngClass]="{'hidden': activeMenu!='desktop'}"></desktop-view>
     <!-- <ports-view [ngClass]="{'hidden': activeMenu!='ports'}"></ports-view> -->
     <!-- <web-view [ngClass]="{'hidden': activeMenu!='web'}"></web-view> -->
-    <files-view [ShowFrame]="filesRequested" [InView]="activeMenu=='files'"
+    <files-view [InView]="activeMenu=='files'"
       [ngClass]="{'hidden': activeMenu!='files'}" [noOfTerminals]="noOfTerminals"></files-view>
   </section>
 </div>
