--- a/ui/src/app/pages/desktop-view/desktop-view.component.html
+++ b/ui/src/app/pages/desktop-view/desktop-view.component.html
@@ -10,7 +10,7 @@
             Loading NoVNC Client...
         </span>
     </div>
-    <div class="share-overlay flex-col" *ngIf="DesktopRequested" (click)="openShareDialog()">
+    <div class="share-overlay flex-col" *ngIf="DesktopRequested&&NoVNCClientReady" (click)="openShareDialog()">
         <img src="/assets/icons/share.svg" alt="share" class="share-icon">
     </div>
     <iframe id="DesktopFrame" *ngIf="DesktopRequested" [ngStyle]="{'z-index': !NoVNCClientReady ? '-99': '0'}"
