--- a/ui/src/app/components/share-desktop-dialog/share-desktop-dialog.component.css
+++ b/ui/src/app/components/share-desktop-dialog/share-desktop-dialog.component.css
@@ -1,4 +1,11 @@
-.share-btn {
+.enable-btn {
+    background-color: #3f51b5 !important;
+    color: white !important;
+}
+
+.disable-btn {
+    background-color: #f44336 !important;
+    color: white !important;
     margin-top: 1rem;
 }
 
@@ -7,7 +14,7 @@
     justify-content: space-between;
 }
 
-.share-enable{
+.share-enable {
     height: 8rem;
 }
 
