--- a/ui/src/app/pages/shared-desktop-view/shared-desktop-view.component.html
+++ b/ui/src/app/pages/shared-desktop-view/shared-desktop-view.component.html
@@ -23,7 +23,7 @@
         <span class="share-msg">Loading NoVNC Client...</span>
     </div>
 </div>
-<div class="flex-row" *ngIf="shareAvailable" [ngStyle]="{'z-index': shareAvailable&&NoVNCClientReady ? '0': '-99'}">
+<div class="flex-row" *ngIf="shareAvailable" [ngStyle]="{'z-index': NoVNCClientReady ? '0': '-99'}">
     <iframe id="DesktopFrame" 
         (load)="stateChange()" 
         class="shared-desktop-view" 
