Added Loading DashBoard Indication

--- a/ui/src/app/pages/login/login.component.css
+++ b/ui/src/app/pages/login/login.component.css
@@ -99,3 +99,12 @@
     margin: 0.5rem;
     flex-direction: row-reverse;
 }
+
+.loading-dashboard{
+    font-family: 'PT Sans';
+}
+.loading-dash-spinner{
+        width: 1.2rem !important;
+        height: 1.2rem !important;
+        margin-right: 0.5rem;
+}
