--- a/ui/src/app/pages/login/login.component.html
+++ b/ui/src/app/pages/login/login.component.html
@@ -5,9 +5,9 @@
                 <h6>SF</h6>
                 <span id="brandInfo">by hackerschoice</span>
             </div>
-            <div *ngIf="LoginWithSecret" class="input-secret">
+            <div *ngIf="LoginWithSecret && !loadingDashBoard" class="input-secret">
                 <input type="password" [(ngModel)]="secret" placeholder="Secret..." required (keyup.enter)="login()">
-                <img src="../../../assets/icons/question.svg" alt="" (click)="openHelpDialog()">
+                <img src="../../../assets/icons/arrow-forward.svg" alt="" (click)="login()">
             </div>
 
             <div *ngIf="!LoginWithSecret" class="flex-col login-btn-container">
@@ -19,7 +19,7 @@
                         Server</button>
                 </div>
             </div>
-            <div class="login-info">
+            <div *ngIf="!loadingDashBoard" class="login-info">
                 <span *ngIf="LoginWithSecret">
                     Enter your Segfault secret<br>to start using...
                 </span>
@@ -28,6 +28,15 @@
                 </div>
                 <span *ngIf="!LoginWithSecret">
                     Free root shells for you...
+                </span>
+            </div>
+            <div *ngIf="loadingDashBoard" class="login-info">
+                <span class="loading-dashboard flex-row">
+                    <div>
+                        <mat-progress-spinner class="loading-dash-spinner" color="danger" mode="indeterminate">
+                        </mat-progress-spinner>
+                    </div>
+                    Loading DashBoard...
                 </span>
             </div>
         </div>
