Refactored Code, Added Ping Interval Control

--- a/ui/src/app/pages/shared-desktop-view/shared-desktop-view.component.css
+++ b/ui/src/app/pages/shared-desktop-view/shared-desktop-view.component.css
@@ -12,3 +12,15 @@
     height: 100vh;
     flex: 1;
 }
+
+.loading-novnc-view{
+    position: absolute;
+    width: 100vw;
+    z-index: 5;
+}
+
+.novnc-view{
+    position: absolute;
+    width: 100vw;
+    z-index: 1;
+}
