Small UI enhancements

--- a/ui/src/app/components/help-dialog/help-dialog.component.html
+++ b/ui/src/app/components/help-dialog/help-dialog.component.html
@@ -6,10 +6,9 @@
     <ul>
       <li>
         <div>
-          <b>What It Does /   Provides</b>
+          <b>What It Provides</b>
           <p>Segfault offers free unlimited Root Servers. A new server (inside a Virtual Machine) is created for every
-            SSH
-            connection.</p>
+            SSH connection.</p>
           <ul class="sub-list">
             <li>Dedicated Root Server for every user.</li>
             <li>Pre-installed tools on Kali-Linux.</li>
@@ -47,6 +46,6 @@
     </ul>
   </div>
   <mat-dialog-actions align="end">
-    <button class="help-close-button" mat-stroked-button mat-dialog-close color="primary">Close</button>
+    <button class="help-close-button" mat-button mat-dialog-close>OK</button>
   </mat-dialog-actions>
 </div>
