--- a/ui/src/app/components/save-secret-dialog/save-secret-dialog.component.html
+++ b/ui/src/app/components/save-secret-dialog/save-secret-dialog.component.html
@@ -3,11 +3,11 @@
         <span>Save Your Secret !</span>
     </div>
     <div class="help-content">
-        <p>This is your secret <code>{{userSecret}}</code> save it someplace safe!.</p>
+        <p>This is your secret <code>{{userSecret}}</code> save it someplace safe!, You'll need it later to log back into your server.</p>
         <br>
         <p>To connect from your terminal use <code>ssh -o "SetEnv SECRET={{userSecret}}" root@{{sfEndpoint}} </code></p>
     </div>
     <mat-dialog-actions align="end">
-        <button class="help-close-button" mat-stroked-button mat-dialog-close color="primary">Close</button>
+        <button class="help-close-button" mat-button mat-dialog-close color="primary">Continue</button>
       </mat-dialog-actions>
 </div>
